# Helion

./: .gitignore  DOCS_SETUP.md  LICENSE  README.md
.github/workflows/: README.md  ci.yml  docs.yml
bindings/python/: Cargo.toml  README.md  build.sh  pyproject.toml  setup.sh
bindings/python/python/helion/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_scatter_plots.py
bindings/web/react/: package.json  tsconfig.json
bindings/web/react/src/: index.tsx
bindings/web/vanilla/: package.json  tsconfig.json
bindings/web/vanilla/src/: index.ts
core/: Cargo.toml
core/src/: backend.rs  data.rs  lib.rs  renderer.rs  scatter.rs  shaders.rs  window.rs
core/tests/: scatter_renderer_tests.rs  scatter_tests.rs  shader_tests.rs
examples/: README.md
examples/python/: README.md  scatter_basic.py  scatter_colors.py  scatter_custom_ranges.py  scatter_million.py  test_mismatched.py
