[package]
name = "helion_core"
version = "0.1.0"
edition = "2021"
authors = ["Helion Contributors"]
license = "Apache-2.0"
description = "High-performance data visualization engine powered by WebGPU"
repository = "https://github.com/rm-ritik/Helion"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3"]
wasm = []

[dependencies]
wgpu = "22.1"
bytemuck = { version = "1.14", features = ["derive"] }
futures = "0.3"
log = "0.4"
pyo3 = { version = "0.22", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
] }
console_log = "1.0"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
